--- a/ClothingStore.Console/ClothingStore.Console.csproj
+++ b/ClothingStore.Console/ClothingStore.Console.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClothingStore.Core\ClothingStore.Core.csproj" />
+  </ItemGroup>
+
 </Project>
